--- a/src/partials/basket.html
+++ b/src/partials/basket.html
@@ -15,9 +15,11 @@
     <use href="./images/icons/icons.svg#icon-close-sharp"></use>
   </svg>
 </div>
-<!-- <div class="flex-cart"> -->
-<div class="product-card">
+<div class="flex-cart">
+<div class="product-cart">
+  
   <img src="${img}" alt="${name}" class="product-image" />
+  
   <div class="product-details">
     <h2 class="product-name">${product name}</h2>
     <div class="cart-product-box">
