--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="container">
-    <div class="wrapper">
+    <div class="footer-wrapper">
       <div class="footer-first-box">
         <div class="footer-logo-text-container">
           <a href="./index.html" class="logo-link-svg link">
@@ -105,7 +105,7 @@
     </div>
   </div>
 </footer>
-<div class="footer-backdrop is-hidden" data-modal>
+<div class="footer-backdrop is-hidden" data-modal-footer>
   <div class="footer-modal footer-mob-modal">
     <!-- <button class="footer-modal-close-btn" type="button" data-modal-close>
       <svg class="footer-modal-icon" width="22" height="22">
