--- a/src/css/basket.css
+++ b/src/css/basket.css
@@ -47,12 +47,13 @@
   margin-bottom: 14px;
 }
 
-p {
+/* p {
   color: rgba(1, 1, 1, 0.7);
   font-size: 18px;
   font-weight: 400;
   line-height: 24px;
-}
+} */
+
 /* PRODUCTS IN THE BASKET */
 /* .cart-title{
 text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -75,9 +76,8 @@ text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   height: 120px;
   flex-shrink: 0;
   border-radius: 10px;
-  background: #FAFAFA;
+  background: #fafafa;
   padding-right: 40px;
-
 }
 
 .product-details {
@@ -99,7 +99,7 @@ text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
 .product-category,
 .product-size {
-  color: rgba(1, 1, 1, 0.30);
+  color: rgba(1, 1, 1, 0.3);
   font-size: 12px;
   font-weight: 400;
   line-height: 14px;
@@ -127,14 +127,12 @@ text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border: none;
   cursor: pointer;
   font-size: 16px;
-  line-height: 20px
+  line-height: 20px;
 }
 
 .icon-close {
   color: var(--black-color);
 }
-
-
 
 /* YOUR ORDER */
 .order-container {
@@ -158,7 +156,6 @@ text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   display: flex;
   padding: 22px 28px 14px;
   margin-top: 40px;
-
 }
 
 .email-and-checkout {
@@ -170,13 +167,12 @@ text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 .sum-style {
   display: flex;
   justify-content: flex-end;
-
 }
 
 .email-input {
   padding: 10px;
   border-radius: 30px;
-  border: 1px solid rgba(1, 1, 1, 0.30);
+  border: 1px solid rgba(1, 1, 1, 0.3);
   background-color: transparent;
   width: 359px;
 }
@@ -188,7 +184,7 @@ text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   align-items: center;
   gap: 10px;
   border-radius: 30px;
-  background: #6D8434;
+  background: #6d8434;
   color: #fff;
   border: none;
   cursor: pointer;
