--- a/src/partials/basket.html
+++ b/src/partials/basket.html
@@ -1,5 +1,5 @@
-<section class="section-empty-basket container">
-  <div class="icon-and-cart">
+<section class="section-empty-basket ">
+  <div class="icon-and-cart container">
     <div class="cart-icon">
       <svg class="cart-icon-img" width="100" height="16">
         <use href="./images/icons/icons.svg#icon-shopping-cart"></use>
