--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,28 +1,29 @@
 <!-- Mobile menu in svg -->
-<header class="header container">
-  <nav class="nav flex">
-    <div class="logo-box flex">
-      <a href="./index.html" class="logo flex">
-        <div class="logo-img flex">
-          <svg class="logo-svg">
-            <use href="./images/icons/icons.svg#icon-cabbage"></use>
+<header class="header">
+  <div class="container">
+    <nav class="nav flex">
+      <div class="logo-box flex">
+        <a href="./index.html" class="logo flex">
+          <div class="logo-img flex">
+            <svg class="logo-svg">
+              <use href="./images/icons/icons.svg#icon-cabbage"></use>
+            </svg>
+          </div>
+          <span class="logo-text">food boutique</span>
+        </a>
+      </div>
+      <div class="basket-header-box flex">
+        <a href="./index.html" class="btn-home flex">
+          <span class="btn-home-text">home</span>
+        </a>
+        <button class="heder-cart-link js-header-cart ddd">
+          <svg class="heder-cart" width="18" height="18">
+            <use href="./images/icons/icons.svg#icon-shopping-cart"></use>
           </svg>
-        </div>
-        <span class="logo-text">food boutique</span>
-      </a>
-    </div>
-    <div class="basket-header-box flex">
-      <a href="./index.html" class="btn-home flex">
-        <span class="btn-home-text">home</span>
-      </a>
-      <button class="heder-cart-link js-header-cart ddd">
-        <svg class="heder-cart" width="18" height="18">
-          <use href="./images/icons/icons.svg#icon-shopping-cart"></use>
-        </svg>
-      </button>
-      <p class="heder-cart-text">cart</p>
-      <div class="cart-number-box">(<span class="item-number"></span>)</div>
-    </div>
-  </nav>
-
+        </button>
+        <p class="heder-cart-text">cart</p>
+        <div class="cart-number-box">(<span class="item-number"></span>)</div>
+      </div>
+    </nav>
+  </div>
 </header>
