popular&discount-products-cards-css

--- a/src/css/discount-products.css
+++ b/src/css/discount-products.css
@@ -1,15 +1,19 @@
 .discount-products-container {
+
 }
 
-.products-title {
+.products-title.discount{
   color: var(--black-color);
   font-family: Neue Montreal;
   font-size: 24px;
   font-weight: 500;
   line-height: 1.16;
+  margin-bottom: 20px;
 }
 
 .discount-products-list {
+  
+  
 }
 
 .discount-products-item {
@@ -26,9 +30,8 @@
 .card-image-discount {
   position: relative;
   display: flex;
-  align-items: center;
   justify-content: center;
-  width: 243px;
+  width: 304px;
   height: 150px;
   background-color: #e8e8e2;
   border-radius: 10px;
@@ -49,19 +52,30 @@
 }
 
 .price {
-  margin-left: 76px;
+ margin-right: 38px;
 }
 
-.discount-card-info {
-  display: flex;
+
+
+.discount-info-box{
   position: relative;
+  display: flex;
+  justify-content: space-between;
+  
+
 }
+.discount-card-info {
+  
+  display: flex;  
+ justify-content: flex-end;
+ align-items: self-start;
+} 
 
 .button-shopping-discount {
-  position: absolute;
-  top: 0;
-  right: 0;
-  transform: translateY(-15%) translateX(10%);
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translateY(-15%) translateX(10%);
   width: 34px;
   height: 34px;
   padding: 8px;
@@ -82,6 +96,17 @@
   fill: var(--background-color);
 }
 
+
+@media screen and (max-width: 375px) {
+  .discount-products-item{
+    max-width: 100%;
+  } 
+
+    .card-image-discount{
+      max-width: 100%;
+    }
+}
+
 @media screen and (min-width: 768px) {
   .products-title {
     font-size: 28px;
@@ -93,10 +118,24 @@
     line-height: 1.2;
   }
 
-  .price {
-    margin-left: 62px;
+  .discount-products-list {
+    display: flex;
+    gap: 32px;
+  
   }
 }
 
 @media screen and (min-width: 1440px) {
+
+  .card-image-discount{
+    width: 243px;
+  }
+  .discount-products-item{
+    width: 275px;
+  }
+
+     .discount-products-list{
+      flex-direction: column;
+      gap: 20px;
+     }
 }
