--- a/src/partials/discount-products.html
+++ b/src/partials/discount-products.html
@@ -1,5 +1,5 @@
 <div class="discount-products-container">
-  <h2 class="products-title">Discount products</h2>
+  <h2 class="products-title discount">Discount products</h2>
   <ul class="discount-products-list">
     <!-- <li class="discount-products-item">
           <div class="card-image-discount">
