--- a/src/partials/popular-products.html
+++ b/src/partials/popular-products.html
@@ -1,5 +1,5 @@
 <div class="popular-products-container">
-  <h2 class="products-title">Popular products</h2>
+  <h2 class="products-title popular">Popular products</h2>
   <ul class="popular-products-list">
     <!-- <li class="popular-products-item">
       <div class="card-image">
