--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -1,4 +1,4 @@
-<div>
+<div class="home_filters-container"></div>
   <h2 class="home_filters">Filters:</h2>
   <div class="home_search-params"></div>
   <form class="home__form-search">
