--- a/src/css/popular-products.css
+++ b/src/css/popular-products.css
@@ -1,13 +1,9 @@
-.popular-products-wraper {
-  width: 275px;
-}
-
 .popular-products-container {
-  width: 275px;
+  width: 335px;
   padding-bottom: 80px;
 }
 
-.products-title.popular{
+.products-title.popular {
   color: var(--black-color);
   font-family: Neue Montreal;
   font-size: 24px;
@@ -26,7 +22,7 @@
   position: relative;
   display: flex;
   padding: 12px 12px;
-  width: 275px;
+  width: 335px;
   height: 98px;
   border-radius: 10px;
   background-color: var(--white-color);
@@ -98,18 +94,30 @@
   fill: var(--background-color);
 }
 
-
 @media screen and (max-width: 375px) {
+  .popular-products-wraper {
+    width: 275px;
+    height: 100%;
+  }
   .popular-products-item {
     max-width: 100%;
   }
 
-  .card-image{
+  .card-image {
     max-width: 100%;
   }
 }
 
 @media screen and (min-width: 768px) {
+  .popular-products-wraper {
+    width: 100%;
+    height: 100%;
+  }
+  .popular-products-container {
+    width: 100%;
+    padding-bottom: 64px;
+  }
+
   .products-title {
     font-size: 28px;
     line-height: 1.14;
@@ -119,23 +127,25 @@
     line-height: 1.2;
   }
 
-    .popular-products-list {
-      flex-wrap: wrap;
-      flex-direction: row;
-    }
-    
-     .popular-products-item{
-      flex-basis: calc((100% - 13px) / 2);
-    }
+  .popular-products-list {
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  .popular-products-item {
+    flex-basis: calc((100% - 13px) / 2);
+  }
 }
 
 @media screen and (min-width: 1440px) {
-  .popular-products-list{
+  .popular-products-wraper {
+    width: auto;
+  }
+  .popular-products-list {
     flex-direction: column;
-
   }
 
-    .popular-products-item{
-      width: 275px;
-    }
+  .popular-products-item {
+    width: 275px;
+  }
 }
