--- a/src/css/popular-products.css
+++ b/src/css/popular-products.css
@@ -135,6 +135,14 @@
   .popular-products-item {
     flex-basis: calc((100% - 13px) / 2);
   }
+
+    .popular-products-item:hover,
+    .popular-products-item:focus{
+    box-shadow: 0px 9.1px 16.53437px 0px rgba(0, 0, 0, 0.02),
+        0px 41.6px 46.475px 0px rgba(0, 0, 0, 0.04),
+        0px 105.3px 124.67812px 0px rgba(0, 0, 0, 0.05),
+        0px 208px 286px 0px rgba(0, 0, 0, 0.07);
+    }
 }
 
 @media screen and (min-width: 1440px) {
