--- a/src/css/popular-products.css
+++ b/src/css/popular-products.css
@@ -99,6 +99,12 @@
     width: 275px;
     height: 100%;
   }
+
+    .popular-products-container{
+      max-width: 100%;
+    }
+
+
   .popular-products-item {
     max-width: 100%;
   }
