--- a/src/partials/products-list.html
+++ b/src/partials/products-list.html
@@ -7,16 +7,16 @@
             <div class="info-product">
                 <h3 class="name-product">${name}</h3>
                 <p class="characteristics-product">
-                    Category:<span class="details-product">${category}</span> Size:<span
+                    Category: <span class="details-product">${category}</span> Size: <span
                         class="details-product">${size}</span>
-                    Popularity:<span class="details-product">${popularity}</span>
+                    Popularity: <span class="details-product">${popularity}</span>
                 </p>
             </div>
-            <div class="price">
+            <div class="product-card-price">
                 <p class="price-product">${price}</p>
                 <button class="js-button-shopping">
                     <svg class="icon-shopping" width="28" height="28">
-                        <use href="../images/icons/icons.svg#icon-shopping-cart"></use>
+                        <use href="./images/icons/icons.svg#icon-shopping-cart"></use>
                     </svg>
                 </button>
             </div>
