--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,8 +15,8 @@
       <a href="./index.html" class="btn-home flex">
         <span class="btn-home-text">home</span>
       </a>
-      <button class="heder-cart-link js-header-cart ddd">
-        <svg class="heder-cart" width="18" height="18">
+      <button class="heder-cart-link js-header-cart">
+        <svg class="heder-cart">
           <use href="./images/icons/icons.svg#icon-shopping-cart"></use>
         </svg>
       </button>
