--- a/src/css/pagination.css
+++ b/src/css/pagination.css
@@ -48,6 +48,7 @@
   max-width: 334px;
   justify-content: space-between;
   padding-top: 40px;
+  margin: 0 auto;
 }
 
 .disabled {
@@ -72,7 +73,7 @@
 
 @media screen and (min-width: 1440px) {
   .pag-ribbon {
-    max-width: 472px;
+    min-width: 472px;
     padding-top: 40px;
   }
 }
