--- a/src/partials/products-list.html
+++ b/src/partials/products-list.html
@@ -1,6 +1,6 @@
 <div class="home_product-card-container">
     <ul class="products-list">
-        <li data-id="${_id}" class="js-product-card">
+        <!-- <li data-id="${_id}" class="js-product-card">
             <div class="image-product">
                 <img class="image" src="${img}" alt="${name}" />
             </div>
@@ -20,6 +20,6 @@
                     </svg>
                 </button>
             </div>
-        </li>
+        </li> -->
     </ul>
 </div>
