--- a/src/css/basket.css
+++ b/src/css/basket.css
@@ -1,8 +1,11 @@
+
+
 .icon-and-cart {
   display: flex;
   align-items: center;
   margin-top: 89px;
   gap: 14px;
+  margin-bottom: 22px;
 }
 
 .cart-icon {
@@ -12,7 +15,14 @@
   align-items: center;
   gap: 10px;
   border-radius: 30px;
+  cursor: pointer;
   background-color: #6d8434;
+}
+
+.cart-icon:hover,
+.cart-icon:focus{
+  background-color: var(--olive-hover-color);
+
 }
 
 .cart-icon-img {
@@ -23,7 +33,6 @@
 
 .cart-info {
   color: var(--black-color);
-  font-style: normal;
   line-height: 32px;
   text-transform: uppercase;
 }
@@ -35,11 +44,11 @@
   visibility: hidden;
 }
 
-.cart-content img {
+/* .cart-content img {
   width: 150px;
   height: 150px;
   display: inline;
-}
+} */
 
 .empty-message {
   color: var(--black-color);
@@ -47,112 +56,132 @@
   margin-bottom: 14px;
 }
 
-/* p {
-  color: rgba(1, 1, 1, 0.7);
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 24px;
-} */
-
 /* PRODUCTS IN THE BASKET */
-/* .cart-title{
-text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-} */
+
 .delete-and-closebtn {
   display: flex;
+  gap: 8px;
 }
-.flex-cart{
+.flex-cart-js{ 
   display: flex;
+  align-items: center;
   flex-direction: column;
-  gap: 80px;
 }
 
-.product-cart {
-  display: flex;
-  padding: 10px;
-  margin: 10px;
-  gap: 40px;
+.product-cart-js {
   position: relative;
-  max-width: 650px;
+  display: flex;
+  margin-bottom: 80px;
+  padding-top: 30px;
+  gap: 20px;
+  position: relative;
 }
 
-.product-image {
+
+
+.basket-img-box{
+  padding: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100px;
   height: 100px;
   border-radius: 10px;
   background-color: var(--white-color);
 }
 
-/* .product-details {
-  flex: 1;
-} */
 
 .product-name {
   color: var(--black-color);
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 18px;
+  line-height: 1.11;
+  font-weight: 500;
+  margin-bottom: 10px;
 }
 
 .cart-product-box {
   display: flex;
   align-items: center;
-  gap: 16px;
-  padding-top: 12px;
+  gap: 8px;
+  margin-bottom: 36px;
 }
 
-.product-category,
-.product-size {
+.product-basket-text {
   color: rgba(1, 1, 1, 0.3);
   font-size: 12px;
-  font-weight: 400;
-  line-height: 14px;
+  line-height: 1.16;
 }
 
-.category-slyle,
-.size-style {
+.product-basket-text span{
   color: var(--black-color);
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 18px;
 }
+
+
 
 .product-price {
   color: var(--black-color);
-  font-size: 20px;
-  line-height: 24px;
-  padding-top: 36px;
+  font-size: 18px;
+  line-height: 1.11;
+  font-weight: 500;
 }
 
 .delete-all-button {
-  background-color: var(--background-color);
+  background-color: transparent;
   color: var(--black-color);
-  /* width: 100%; */
   border: none;
   cursor: pointer;
-  font-size: 16px;
-  line-height: 20px;
+  font-size: 14px;
+  line-height: 1.3;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
 }
 
-.icon-close {
-  color: var(--black-color);
+.button-delete-all-box{
+  display: flex;
+  justify-content: flex-end;
 }
+
+.remove-button{
+  background-color: transparent;
+    color: var(--black-color);
+    border: none;
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 1.3;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    right: -10%;
+    
+}
+
 
 /* YOUR ORDER */
 .order-container {
   display: flex;
 }
 
+.order-title{
+  font-size: 24px;
+  line-height: 1.16;
+}
 
-
-/* .order-summary{
+.order-summary{
   display: flex;
-} */
+  flex-direction: column;
+}
 .summary-box {
   border-radius: 8px;
   background: rgba(109, 132, 52, 0.05);
-  width: 590px;
+  max-width: 100%;
   height: 60px;
-  gap: 364px;
+  justify-content: space-between;
+  align-items: baseline;
   display: flex;
   padding: 22px 28px 14px;
   margin-top: 40px;
@@ -160,6 +189,7 @@ text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
 .email-and-checkout {
   display: flex;
+  flex-direction: column;
   gap: 16px;
   padding-top: 40px;
 }
@@ -169,12 +199,21 @@ text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   justify-content: flex-end;
 }
 
+.sum-span{
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 1.16;
+}
+
 .email-input {
   padding: 10px;
+  font-size: 14px;
+  line-height: 1.3;
   border-radius: 30px;
   border: 1px solid rgba(1, 1, 1, 0.3);
   background-color: transparent;
-  width: 359px;
+  max-width: 335px;
+  height: 42px;
 }
 
 .checkout-button {
@@ -188,6 +227,11 @@ text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   color: #fff;
   border: none;
   cursor: pointer;
+  width: 335px;
+  font-size: 14px;
+  line-height: 1.3;
+  height: 42px;
+
 }
 
 .checkout-button:hover {
@@ -196,41 +240,145 @@ text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
 
 /* VECTOR */
-.product-cart::after {
+.product-cart-js::after {
   content: '';
   position: absolute;
   display: block;
   top: 80%;
-  left: 1%;
   width: 335px;
   height: 1px;
   background-color: black;
   stroke-width: 1px;
   stroke: rgba(1, 1, 1, 0.1);
-  margin-top: 40px;
-}
-@media screen and (min-width: 1440px) {
-  .product-cart::after {
-    width: 500px;
-  }
-    .product-image {
-      width: 120px;
-      height: 120px;
-    }
-        .flex-cart {
-          display: flex;
-          gap: 150px;
-          flex-direction: row;
-        }
-        
+  margin-top: 70px;
 }
 
-@media screen and (min-width: 768px) {
-  .product-cart::after {
-    width: 672px;
+
+
+@media screen and (max-width: 375px){
+  .order-summary{
+    max-width: 100%;
   }
-    .flex-cart {
-      display: flex;
-      gap: 100px;
+
+  .summary-box{
+    max-width: 100%;
+  }
+
+    .product-cart-js::after{
+      max-width: 100%;
     }
+
+   .checkout-button{
+    max-width: 100%;
+   }
+
+     .basket-img-box{
+      max-width: 100%;
+      max-height: 100%;
+     }
+
+   .remove-button{
+   right: 0;
+   }  
+
+}
+
+
+@media screen and (min-width: 768px) {
+  .product-cart-js::after {
+    width: 672px; 
+    margin-top: 80px;
+  }
+    .flex-cart-js {
+      display: flex;
+      align-items: baseline;
+    
+    
+    }
+
+    .product-cart-js{
+      width: 672px;
+      margin-bottom: 100px;
+    }
+
+    .order-title{
+      font-size: 32px;
+      line-height: 1;
+    }
+
+    .summary-box{
+      width: 590px;
+    }
+
+    .email-and-checkout{
+      flex-direction: row;
+      justify-content: space-between;
+
+    }
+
+    .email-input{
+      font-size: 18px;
+      width: 335px;
+    }
+
+    .checkout-button{
+      width: 215px;
+      font-size: 20px;
+    }
+
+    .delete-all-button{
+      font-size: 16px;
+
+    }
+
+    .product-name{
+      font-size: 20px;
+      line-height: 1.2;
+    }
+   .button-delete-all-box{
+      width: 672px;
+    }
+
+    .remove-button{
+      right: 0;
+    }
+
+    .product-basket-text span{
+    font-size: 14px;
+}
+
+.product-price{
+font-size: 20px;
+line-height: 1.2;
+}
+
+}
+
+
+@media screen and (min-width: 1440px) {
+  .product-cart-js::after {
+    width: 500px;
+  }
+
+  .product-cart-js{
+    width: 500px;
+  }
+
+  .product-image {
+
+  }
+
+  .flex-cart-js {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: normal;
+   
+  }
+
+
+        .button-delete-all-box {
+          width: 500px;
+        }
+
 }
