--- a/src/partials/basket.html
+++ b/src/partials/basket.html
@@ -1,63 +1,76 @@
-<section class="section-empty-basket ">
-  <div class="icon-and-cart container">
-    <div class="cart-icon">
-      <svg class="cart-icon-img" width="100" height="16">
-        <use href="./images/icons/icons.svg#icon-shopping-cart"></use>
-      </svg>
+<div class="container">
+  <section class="section-empty-basket">
+    <div class="icon-and-cart">
+      <button type="button" class="cart-icon">
+        <svg class="cart-icon-img" width="100" height="16">
+          <use href="./images/icons/icons.svg#icon-shopping-cart"></use>
+        </svg>
+      </button>
+      <div class="cart-info">
+        <h1 id="cartTitle">Cart (0)</h1>
+      </div>
     </div>
-<div class="cart-info">
-  <h1 id="cartTitle">Cart (0)</h1>
-</div>
-</div>
-<div class="delete-and-closebtn">
-  <button class="delete-all-button">Delete All</button>
-  <svg class="icon-close" width="24" height="24">
-    <use href="./images/icons/icons.svg#icon-close-sharp"></use>
-  </svg>
-</div>
-<div class="flex-cart">
-<div class="product-cart">
-  
-  <img src="${img}" alt="${name}" class="product-image" />
-  
-  <div class="product-details">
-    <h2 class="product-name">${product name}</h2>
-    <div class="cart-product-box">
-      <p class="product-category">
-        Category: <span class="category-slyle">${category}</span>
+    <div class="button-delete-all-box">
+      <button class="delete-all-button">
+        Delete All
+        <svg class="icon-delete" width="24" height="24">
+          <use href="./images/icons/icons.svg#icon-close-sharp"></use>
+        </svg>
+      </button>
+    </div>
+    <div class="flex-cart-js">
+      <div class="product-cart-js">
+        <div class="basket-img-box">
+          <img src="${img}" alt="${name}" class="product-image" />
+        </div>
+        <div class="product-details">
+          <button class="remove-button">
+            <svg class="icon-remove" width="18" height="18">
+              <use href="./images/icons/icons.svg#icon-close-sharp"></use>
+            </svg>
+          </button>
+          <h2 class="product-name">${name}</h2>
+          <div class="cart-product-box">
+            <p class="product-basket-text">
+              Category: <span class="category-slyle">${category}</span>
+            </p>
+            <p class="product-basket-text">
+              Size: <span class="size-slyle">${size}</span>
+            </p>
+          </div>
+          <p class="product-price">${price}</p>
+        </div>
+      </div>
+
+      <div class="order-summary">
+        <h1 class="order-title">YOUR ORDER</h1>
+        <div class="summary-box">
+          <p class="product-name">Total</p>
+          <p class="product-basket-text">
+            Sum:<span class="sum-span">${sum}</span>
+          </p>
+        </div>
+        <div class="email-and-checkout">
+          <input
+            type="email"
+            placeholder="Mail: Enter your email"
+            class="email-input"
+          />
+          <button class="checkout-button">Checkout</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="cart-content" id="cartContent">
+      <img src="./images/basket-2x.png" alt="Basket Image" />
+      <p class="empty-message" id="emptyMessage">
+        Your basket is<span style="color: #6d8434"> empty ...</span>
       </p>
-      <p class="product-size">
-        Size: <span class="size-slyle">${size}</span>
+
+      <p>
+        Go to the main page to select your favorite <br />products and add them
+        to the cart<br />
       </p>
     </div>
-    <p class="product-price">${price}</p>
-
-    <!-- <button class="remove-button" onclick="removeProduct()">Remove</button> -->
-  </div>
+  </section>
 </div>
-
-<div class="order-summary">
-  <h1 class="order-title">YOUR ORDER</h1>
-  <div class="summary-box">
-    <p class="product-name">Total</p>
-    <p>Sum: ${sum}</p>
-  </div>
-  <div class="email-and-checkout">
-    <input type="email" placeholder="Mail: Enter your email" class="email-input" />
-    <button class="checkout-button">Checkout</button>
-  </div>
-</div>
-</div>
-
-  <div class="cart-content" id="cartContent">
-    <img src="./images/basket-2x.png" alt="Basket Image" />
-    <p class="empty-message" id="emptyMessage">
-      Your basket is<span style="color: #6d8434"> empty ...</span>
-    </p>
-
-    <p>
-      Go to the main page to select your favorite <br />products and add them to
-      the cart<br />
-    </p>
-  </div>
-</section>
